Development (#39)
* Feature/mes 87 (#30)

* MES-88 - Simplify filtering and sorting implementation

* MES-87 - add abstraction to searchable properties

* MES-87 - remove unused imports

* MES-87 - Fix composed summary query

* MES-87 - remove CounterRecordSortDto

* MES-87 simplify winnow repository

* MES-87 - generify winnow repository

* MES-87 - Generify sortable winnow

* MES-87 - Generic winnow implemented

* feature/MES-87 - Generic joint property mappings

* feature/MES-87 - Improve Abstract Winnow Repository dependency injection

* MES-87 - Minor code improvements

* MES-87 - Users with filter and sort

* feature/MES-87 - Ensure changes are compatible with previous flow

* feature/MES-87 - Generic findAllWithWinnow

* feature/MES-87 - refactor methods naming

* MES-87 - Update postman collection

* MES-87 - change filter name

* MES-87 - remove all winnow references

* MES-254 - Composed Production Orders - Validation logic (#31)

* MES-254 - Composed Production Orders - Validation logic

* MES-254 - Composed Production Orders - Validation logic

* MES-254 - Composed Production Orders - Validation logic

* MES-257 - Database/Entity: add counting_equipment columns/properties

* MES-257 - Database/Entity: add counting_equipment columns/properties

* MES-257 - Database/Entity: add counting_equipment columns/properties

* MES-257 - Database/Entity: add counting_equipment columns/properties

* MES-257 - Database/Entity: add counting_equipment columns/properties

* MES-247 - Central de máquinas: endpoint to create equipment configuration

* MES-247 - Central de máquinas: endpoint to create equipment configuration

* MES-257 - Database/Entity: add counting_equipment columns/properties

* MES-247 - Central de máquinas: endpoint to create equipment configuration

* MES-247 - Central de máquinas: endpoint to create equipment configuration

* MES-247 - Central de máquinas: endpoint to create equipmen